...
            }, label: {
                Text(!user.isConnected ? User.Connect : User.Disconnect)
            }).sheet(isPresented: $showLogin){
                AULoginView()
            }.padding()
                .frame(maxWidth: .infinity, alignment: .trailing)
                .accessibilityIdentifier("AuConnectButton")
        }
    }
    
    func middleHstack() -> some View{
        return HStack (alignment: .center, spacing :10){
            Spacer()
...
